# ollama-easy-rag

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre_release.yml  release.yml
src/ollama-easy-rag/: ollama-easy-rag.py
src/ollama_easy_rag/: __init__.py  ollama_easy_rag.py
tests/: test_starts.py
